--- a/index.html
+++ b/index.html
@@ -8,17 +8,39 @@
 	<body>
 		<nav>
     		<ul>
-        	  <li><a href="mailto:aliceywscott@gmail.com">Email</a></li>
+        	  	<li><a href="mailto:aliceywscott@gmail.com">Email</a></li>
         		<li><a href="https://github.com/AliceWScott">github.com/AliceWScott</a></li>
-            <li><a href="https://www.instagram.com/alicewscott/">Instagram</a></li>
-        		<li><a href="/cv">CV</a></li>
+            		<li><a href="https://www.instagram.com/alicewscott/">Instagram</a></li>
+			<li><a href="https://www.linkedin.com/in/alice-scott-06a90a115">Linkedin</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Alice</h1>
-				<p>Lover of plants, pottery, and eating pastries.<a href="/about">More...</a></p>
+			<p>Software Engineer at Google, but most importantly a lover of plants, pottery, and eating pastries.<a href="/about">More...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+		
+		<div class="content">	
+		I graduated from McGill University in 2018 with a degree in Computer Science and a minor in Cultural Studies (yes, I got to take classes about Netflix and comic books)!
+		While I took a wide variety of CS classes ranging from computer graphics to NLP and ML to digital humanities, I've gotten the pleasure (and sometimes horror) of getting 
+		well acquainted with frontend work since beginning my professional career. 
+		</div>
+		</div class="content">
+		I particpated in a yearlong program as an <a href="https://www.google.com/about/careers/students/engres.html">Engineering Resident<a> at the Google Seattle office, which gave me the unique experience of getting to experience multiple teams in a short span of time! 
+		Since then, I've joined on full time as an engineer in Google Research on an early-staged project focused on improving the language learning experience.
+		</div><!-- /.content -->
+		<div class="content">
+			Other random things about me, in no particular order:
+			<ul>
+				<li>I completed a software dev co-op at the Government of Canada.</li>
+				<li>I am completely bilingual in French and English. Mais ne me posez aucune question technique de codage en français, s'il vous plaît!</li>
+				<li>I was a teaching assistant at <a href="https://www.digitalmediaacademy.org/">Digital Media Academy</a>, where I helped teach a python game programming course, and a Lego EV3 robotics course to kids aged 9-17. This role kickstarted my interest in making tech accessible to all kids from an early age!</li>
+				<li>I was a competitive figure skater for years, and then went on to skate for the McGill Skating Team (check out my now long-gone flexibility and skills <a href="https://youtu.be/1OOirn9X_Js">here<a>). </li>
+			</ul>	
+		</div>
+		<div class="content">
+			When I'm not working, I spend most of my time at the pottery studio, at the gym, reading recipe blogs, watering my plants, and watching endless thift flip videos on youTube.
+		</div>
 	</body>
 </html>
