--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
 		well acquainted with frontend work since beginning my professional career. 
 		</div>
 		</div class="content">
-		I particpated in a yearlong program as an <a href="https://www.google.com/about/careers/students/engres.html">Engineering Resident<a> at the Google Seattle office, which gave me the unique experience of getting to experience multiple teams in a short span of time! 
+		I particpated in a yearlong program as an <a href="https://www.google.com/about/careers/students/engres.html">Engineering Resident<a> at the Google Seattle office, which gave me the unique experience of getting to experience multiple teams in a short span of time!
 		Since then, I've joined on full time as an engineer in Google Research on an early-staged project focused on improving the language learning experience.
 		</div><!-- /.content -->
 		<div class="content">
 			Other random things about me, in no particular order:
 			<ul>
+				<li>I now give back to the Engineering Residency program by volunteering as a code mentor for new cohorts of residents.</li>
 				<li>I completed a software dev co-op at the Government of Canada.</li>
 				<li>I am completely bilingual in French and English. Mais ne me posez aucune question technique de codage en français, s'il vous plaît!</li>
 				<li>I was a teaching assistant at <a href="https://www.digitalmediaacademy.org/">Digital Media Academy</a>, where I helped teach a python game programming course, and a Lego EV3 robotics course to kids aged 9-17. This role kickstarted my interest in making tech accessible to all kids from an early age!</li>
