--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 		<title>Alice Scott</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	</head>
 	<body>
 		<nav>
     		<ul>
         	  	<li><a href="mailto:aliceywscott@gmail.com">Email</a></li>
-        		<li><a href="https://github.com/AliceWScott">github.com/AliceWScott</a></li>
+        		<li><a href="https://github.com/AliceWScott">github</a></li>
             		<li><a href="https://www.instagram.com/alicewscott/">Instagram</a></li>
 			<li><a href="https://www.linkedin.com/in/alice-scott-06a90a115">Linkedin</a></li>
     		</ul>
@@ -17,7 +18,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Alice</h1>
-			<p>Software Engineer at Google, but most importantly a lover of plants, pottery, and eating pastries.<a href="/about">More...</a></p>
+			<p>Software Engineer at Google, but most importantly a lover of plants, pottery, and eating pastries.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
