--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 	<head>
 		<title>Alice Scott</title>
 		<!-- link to main stylesheet -->
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+		<meta name="description" content="Alice Scott Personal Website"
+		<meta property="og:title" content="Alice Scott">
+       		<meta property="og:site_name" content="Alice Scott">
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">">
 	</head>
 	<body>
 		<nav>
@@ -17,7 +21,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Alice</h1>
+        		<h1>Alice Scott</h1>
 			<p>Software Engineer at Google, but most importantly a lover of plants, pottery, and eating pastries.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
