--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta property="og:title" content="Alice Scott">
        		<meta property="og:site_name" content="Alice Scott">
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
-		<link rel="stylesheet" href="<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">">
+		<link rel="stylesheet" href="<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<nav>
