--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		well acquainted with frontend work since beginning my professional career. 
 		</div>
 		</div class="content">
-		I particpated in a yearlong program as an <a href="https://www.google.com/about/careers/students/engres.html">Engineering Resident<a> at the Google Seattle office, which gave me the unique experience of getting to experience multiple teams in a short span of time!
+		I particpated in a yearlong program as an <a href="https://www.google.com/about/careers/students/engres.html">Engineering Resident</a> at the Google Seattle office, which gave me the unique experience of getting to experience multiple teams in a short span of time!
 		Since then, I've joined on full time as an engineer in Google Research on an early-staged project focused on improving the language learning experience.
 		</div><!-- /.content -->
 		<div class="content">
