--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     		<div class="blurb">
         		<h1>Alice Scott</h1>
 			<p>Software Engineer at Google, but most importantly a lover of plants, pottery, and eating pastries.</p>
+				  <img class="image" src="img/alicescott.jpg">
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
@@ -42,7 +43,7 @@
 				<li>I completed a software dev co-op at the Government of Canada.</li>
 				<li>I am completely bilingual in French and English. Mais ne me posez aucune question technique de codage en français, s'il vous plaît!</li>
 				<li>I was a teaching assistant at <a href="https://www.digitalmediaacademy.org/">Digital Media Academy</a>, where I helped teach a python game programming course, and a Lego EV3 robotics course to kids aged 9-17. This role kickstarted my interest in making tech accessible to all kids from an early age!</li>
-				<li>I was a competitive figure skater for years, and then went on to skate for the McGill Skating Team (check out my now long-gone flexibility and skills <a href="https://youtu.be/1OOirn9X_Js">here<a>). </li>
+				<li>I was a competitive figure skater for years, and then went on to skate for the McGill Skating Team (check out my now long-gone flexibility and skills <a href="https://youtu.be/1OOirn9X_Js">here</a>). </li>
 			</ul>	
 		</div>
 		<div class="content">
