--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     		<div class="blurb">
         		<h1>Alice Scott</h1>
 			<p>Software Engineer at Google, but most importantly a lover of plants, pottery, and eating pastries.</p>
-				  <img class="image" src="img/alicescott.jpg">
+				  <img class="image" src="alicescott.jpg">
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
