--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Alice Scott</h1>
-			<p>Software Engineer at Google, but most importantly a lover of plants, pottery, and eating pastries.</p>
+			<div class="blurb-text">
+        			<h1>Alice Scott</h1>
+				<p>Software Engineer at Google, but most importantly a lover of plants, pottery, and eating pastries.</p>
+			</div>
 			<img class="image" src="img/alicescott.jpg">
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
@@ -37,7 +39,7 @@
 		Since then, I've joined on full time as an engineer in Google Research on an early-staged project focused on improving the language learning experience.
 		</div><!-- /.content -->
 		<div class="content">
-			Other random things about me, in no particular order:
+			<h3>Other random things about me, in no particular order:</h3>
 			<ul>
 				<li>I now give back to the Engineering Residency program by volunteering as a code mentor for new cohorts of residents.</li>
 				<li>I completed a software dev co-op at the Government of Canada.</li>
