--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     		<div class="blurb">
 			<div class="blurb-text">
         			<h1>Alice Scott</h1>
-				<p>Software Engineer at Google, but most importantly a lover of plants, pottery, and eating pastries.</p>
+				<p>Lover of plants, pottery, and eating pastries (and also a Software Engineer at Google).</p>
 			</div>
 			<img class="image" src="img/alicescott.jpg">
     		</div><!-- /.blurb -->
