--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 		
 		<div class="content">	
 		I graduated from McGill University in 2018 with a degree in Computer Science and a minor in Cultural Studies (yes, I got to take classes about Netflix and comic books)!
-		While I took a wide variety of CS classes ranging from computer graphics to NLP and ML to digital humanities, I've gotten the pleasure (and sometimes horror) of getting 
+		While I took a wide variety of CS classes ranging from computer graphics to NLP and ML to digital humanities, I've since been experiencing the pleasure (and sometimes horror) of getting 
 		well acquainted with frontend work since beginning my professional career. 
 		</div>
 		</div class="content">
-		I particpated in a yearlong program as an <a href="https://www.google.com/about/careers/students/engres.html">Engineering Resident</a> at the Google Seattle office, which gave me the unique experience of getting to experience multiple teams in a short span of time!
+		After graduating, I particpated in a yearlong program as an <a href="https://www.google.com/about/careers/students/engres.html">Engineering Resident</a> at the Google Seattle office, which gave me the unique experience of getting to experience multiple teams in a short span of time!
 		Since then, I've joined on full time as an engineer in Google Research on an early-staged project focused on improving the language learning experience.
 		</div><!-- /.content -->
 		<div class="content">
-			<h3>Other random things about me, in no particular order:</h3>
+			<h3>Other random things about me, some work related and some not:</h3>
 			<ul>
 				<li>I completed a software dev co-op at the Government of Canada.</li>
 				<li>I am completely bilingual in French and English. Mais ne me posez aucune question technique de codage en français, s'il vous plaît!</li>
