--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		
 		<div class="content">	
 		I graduated from McGill University in 2018 with a degree in Computer Science and a minor in Cultural Studies (yes, I got to take classes about Netflix and comic books)!
-		While I took a wide variety of CS classes ranging from computer graphics to NLP and ML to digital humanities, I've since been experiencing the pleasure (and sometimes horror) of getting 
+		While I took a wide variety of CS classes ranging from <a href="https://github.com/AliceWScott/RayTracer/blob/master/A4/novel_scene.png">computer graphics</a> to NLP and ML to digital humanities, I've since been experiencing the pleasure (and sometimes horror) of getting 
 		well acquainted with frontend work since beginning my professional career. 
 		</div>
 		</div class="content">
