--- a/index.html
+++ b/index.html
@@ -16,39 +16,28 @@
         		<li><a href="https://github.com/AliceWScott">github</a></li>
             		<li><a href="https://www.instagram.com/alicewscott/">Instagram</a></li>
 			<li><a href="https://www.linkedin.com/in/alice-scott-06a90a115">Linkedin</a></li>
+										       <li></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
 			<div class="blurb-text">
         			<h1>Alice Scott</h1>
-				<p>Lover of plants, pottery, eating pastries (and also a Software Engineer at Google).</p>
+				<p>Lover of plants, pottery, and thrift flip youTube videos (and also a Software Engineer at Google).</p>
 			</div>
 			<img class="image" src="img/alicescott.jpg">
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
-		
-		<div class="content">	
-		I graduated from McGill University in 2018 with a degree in Computer Science and a minor in Cultural Studies (yes, I got to take classes about Netflix and comic books)!
-		While I took a wide variety of CS classes ranging from <a href="https://github.com/AliceWScott/RayTracer/blob/master/A4/novel_scene.png">computer graphics</a> to NLP and ML to digital humanities, I've since been experiencing the pleasure (and sometimes horror) of getting 
-		well acquainted with frontend work since beginning my professional career. 
-		</div>
-		</div class="content">
-		After graduating, I particpated in a yearlong program as an <a href="https://www.google.com/about/careers/students/engres.html">Engineering Resident</a> at the Google Seattle office, which gave me the unique experience of getting to experience multiple teams in a short span of time!
-		Since then, I've joined on full time as an engineer in Google Research on an early-staged project focused on improving the language learning experience.
-		</div><!-- /.content -->
 		<div class="content">
-			<h3>Other random things about me, some work related and some not:</h3>
+			<h3>Random things about me, some work related and some not:</h3>
 			<ul>
+				<li>McGill University Alum (go Marlets!) with a degree in Computer Science and a minor in Cultural Studies.</li>
+				<li>I joined Google through the <a href="https://www.google.com/about/careers/students/engres.html">Engineering Residency</a> program.</li>
 				<li>I completed a software dev co-op at the Government of Canada.</li>
 				<li>I am completely bilingual in French and English. Mais ne me posez aucune question technique de codage en français, s'il vous plaît!</li>
 				<li>I was a teaching assistant at <a href="https://www.digitalmediaacademy.org/">Digital Media Academy</a>, where I helped teach a python game programming course, and a Lego EV3 robotics course to kids aged 9-17. This role kickstarted my interest in making tech accessible to all kids from an early age!</li>
 				<li>I was a competitive figure skater for years, and then went on to skate for the McGill Skating Team (check out my now long-gone flexibility and skills <a href="https://youtu.be/1OOirn9X_Js">here</a>). </li>
-				<li>I now give back to the Engineering Residency program by volunteering as a code mentor for new cohorts of residents.</li>
 			</ul>	
-		</div>
-		<div class="content">
-			When I'm not working, I spend most of my time at the pottery studio, at the gym, reading recipe blogs, watering my plants, and watching endless thift flip videos on youTube.
 		</div>
 	</body>
 </html>
